# githooks

./: .gitignore  CHANGELOG.md  README.md  conftest.py  pyproject.toml
src/examples/: commit-msg.py  pre-commit.py  pre-push.py
src/githooks/: __init__.py  cli.py  colors.py  constants.py  exceptions.py  git_hooks.py  helpers.py  pre_commit_example.py  pre_push_example.py
src/githooks/hooks/: __init__.py  commit_msg.py  pre_commit.py  pre_push.py
src/githooks/hooks/tests/: test_commit_msg.py
