[project]
name = "githooks"
version = "1.3.0"
description = "Write pretty and concise Git hooks in Python."
readme = "README.md"
requires-python = ">=3.12"
authors = [{"name"="Kamil Cyganowski", email="kamil.cyganowski@gmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
dependencies = []

[project.scripts]
githooks = "githooks.cli:main"

[project.urls]
Homepage = "https://github.com/kamil-cy/githooks"
Repository = "https://github.com/kamil-cy/githooks"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
  "bandit>=1.9.4",
  "mypy>=1.20.2",
  "pytest",
  "pytest-cov",
  "ruff>=0.15.12",
  "semgrep>=1.161.0",
  "types-colorama>=0.4.15.20260508",
]

[tool.coverage.report]
skip_covered = true
skip_empty = true
show_missing = true
fail_under = 0

[tool.coverage.run]
omit = [
  "src/githooks/__init__.py"
 ]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=html:.htmlcov/ -v --tb=short -s"
# env = [
#     "PYTHONBREAKPOINT=ipdb.set_trace",
#  ]

[tool.ruff]
line-length=100
